<resources>
    <string name="app_name">PacmanKotlin</string>
    <string name="points">Points:</string>
    <string name="action_settings">Settings</string>
    <string name="newgame">New Game</string>
    <string name="move_right">Move Right</string>
    <string name="move_left">Move left</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="timer">Timer %1$d</string>
    <string name="timeLeft">Time left: %1$d</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>
</resources>
