<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_red_light">

        <Button
            android:id="@+id/moveLeft"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/move_left" />

        <Button
            android:id="@+id/moveRight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/move_right" />

        <Button
            android:id="@+id/moveUp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/move_up" />

        <Button
            android:id="@+id/moveDown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/move_down" />

    </LinearLayout>

    <org.pondar.pacmankotlin.GameView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="588dp"
        android:layout_weight="1">
    </org.pondar.pacmankotlin.GameView>

    <TextView
        android:id="@+id/pointsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:textSize="24sp" />

    <!-- Notice how the custom view is referenced here with
    a full package path-->


</RelativeLayout>
